# optim-col-gen

./: .gitignore  CMakeLists.txt  README.md  RMP_check_errors.py  flight_loader.h  main.py  prod_main.cpp  sam.txt
functions_py/: CostPenalty_gl.py  Flight_gl.py  LegalityChecker_gl.py  PricingProblemDH_gl.py  PricingProblem_gl.py  RestrictedMasterProblem_gl.py  Trip_gl.py  schedule_reader.py
input/: cost_penalties.txt  sam.txt
input_py/: cost_penalties.txt  sam_py.txt  sam_short_py.txt
old/: main.py
old cpp/: flight_loader.cpp  main  main_v1.cpp
old/cpp/: main_bigger.cpp  main_bigger_constraints.cpp  main_bigger_constraintsV1.cpp
old/python/: main.cpp
output_py/: CC_timetable.txt  CC_timetable_UNCOVERED.txt
